# accentled

./: CMakeLists.txt  README.md
include/: accent.hpp  serial.hpp
src/: accent.cpp  main.cpp  process.cpp  serial.cpp
